refactor: add some improvements