@@ -10,20 +10,15 @@ import org.springframework.stereotype.Component;
 import ru.yandex.practicum.filmorate.exceptions.ValidationException;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.Genre;
-import ru.yandex.practicum.filmorate.model.MPARating;
-import ru.yandex.practicum.filmorate.storage.genre.GenreDbStorage;
-import ru.yandex.practicum.filmorate.storage.likestorage.LikeDbStorage;
 import ru.yandex.practicum.filmorate.storage.mparating.MPARatingDbStorage;
 
 import java.sql.Date;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
+import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import static ru.yandex.practicum.filmorate.validators.FilmValidator.*;
 
@@ -33,35 +28,46 @@ import static ru.yandex.practicum.filmorate.validators.FilmValidator.*;
 @Component("filmDbStorage")
 public class FilmDbStorage implements FilmStorage {
     private final JdbcTemplate jdbcTemplate;
-    private final GenreDbStorage genreDbStorage;
-    private final LikeDbStorage likeDbStorage;
     private final MPARatingDbStorage mpaRatingDbStorage;
-    private static final String SQL_FIND_ALL_FILMS
-            = "SELECT f.*, mpa.mpa_rating_name"
+    private static final String SQL_FIND_MODEL_FILMS
+            = "SELECT f.*,"
+            + " mpa.mpa_rating_name,"
+            + " GROUP_CONCAT (DISTINCT g.genre_id ORDER BY g.genre_id) AS genre_ids,"
+            + " GROUP_CONCAT (DISTINCT g.genre_name ORDER BY g.genre_id) AS genre_names,"
+            + " GROUP_CONCAT (DISTINCT l.user_id ORDER BY l.user_id) AS user_ids"
             + " FROM films f"
-            + " LEFT JOIN mpa_rating mpa ON mpa.mpa_rating_id = f.mpa_rating_id";
-    private static final String SQL_FIND_FILM_BY_ID
-            = SQL_FIND_ALL_FILMS + " WHERE f.film_id = ?";
+            + " LEFT JOIN mpa_rating mpa ON mpa.mpa_rating_id = f.mpa_rating_id"
+            + " LEFT JOIN genre_link gl ON gl.film_id = f.film_id"
+            + " LEFT JOIN genre g ON g.genre_id = gl.genre_id"
+            + " LEFT JOIN likes l ON l.film_id = f.film_id"
+            + " GROUP BY f.film_id";
+    private static final String SQL_FIND_MODEL_FILM_BY_ID
+            = SQL_FIND_MODEL_FILMS
+            + " HAVING f.film_id = ?";
     private static final String SQL_ADD_FILM
             = "INSERT INTO FILMS (NAME, DESCRIPTION, RELEASE_DATE, DURATION, MPA_RATING_ID) VALUES(?, ?, ?, ?, ?)";
     private static final String SQL_UPDATE_FILM
             = "UPDATE FILMS SET NAME=?, DESCRIPTION=?, RELEASE_DATE=?, DURATION=?, MPA_RATING_ID=? WHERE FILM_ID=?";
+    private static final String SQL_DELETE_FILM_BY_ID
+            = "DELETE FROM films WHERE film_id=?";
     private static final String SQL_ADD_GENRE_LINK
             = "MERGE INTO genre_link (film_id, genre_id) KEY (film_id, genre_id) VALUES(?, ?)";
     private static final String SQL_DELETE_GENRES_OF_FILM
             = "DELETE FROM genre_link WHERE film_id=?";
+    private static final String SQL_DELETE_LIKES_OF_FILM
+            = "DELETE FROM likes WHERE film_id=?";
 
     @Override
     public List<Film> findAllFilms() {
-        return jdbcTemplate.query(SQL_FIND_ALL_FILMS,
-                (rs, rowNum) -> setFilm(rs)
+        return jdbcTemplate.query(SQL_FIND_MODEL_FILMS,
+                this::setFilm
         );
     }
 
     @Override
     public Film findFilmById(Long filmId) {
-        Film film = jdbcTemplate.queryForObject(SQL_FIND_FILM_BY_ID,
-                (rs, rowNum) -> setFilm(rs),
+        Film film = jdbcTemplate.queryForObject(SQL_FIND_MODEL_FILM_BY_ID,
+                this::setFilm,
                 filmId
         );
         if (film != null) {
@@ -116,10 +122,10 @@ public class FilmDbStorage implements FilmStorage {
 
     @Override
     public Film updateFilm(Film film) {
-        Film updateFilm;
         if (!isReleaseDateValid(film)) {
             throw new ValidationException("The date of the Film is not valid");
         }
+        Film updateFilm;
         List<Genre> genres = film.getGenres();
 
         jdbcTemplate.update(SQL_UPDATE_FILM,
@@ -151,69 +157,59 @@ public class FilmDbStorage implements FilmStorage {
         throw new IllegalArgumentException(errorMessage);
     }
 
-    private Film setFilm(ResultSet rs) throws SQLException {
+    @Override
+    public boolean deleteFilm(Long filmId) {
+        jdbcTemplate.update(SQL_DELETE_GENRES_OF_FILM, filmId);
+        jdbcTemplate.update(SQL_DELETE_LIKES_OF_FILM, filmId);
+        if (jdbcTemplate.update(SQL_DELETE_FILM_BY_ID, filmId) == 1) {
+            log.info(String.format("Film: %s, was deleted", filmId));
+            return true;
+        }
+        log.error(String.format("Failed to delete Film: %s", filmId));
+        return false;
+    }
+
+    private Film setFilm(ResultSet rs, int rowSet) throws SQLException {
         return Film.builder()
                 .id(rs.getLong("film_id"))
                 .name(rs.getString("name"))
                 .description(rs.getString("description"))
                 .releaseDate(rs.getDate("release_date").toLocalDate())
                 .duration(rs.getInt("duration"))
-                .genres(genreDbStorage.findGenresByFilmId(rs.getLong("film_id")))
-                .mpa(mpaRatingDbStorage.findRatingById(rs.getInt("mpa_rating_id")))
-                .likes(likeDbStorage.getUsersLikesFilm(rs.getLong("film_id")))
+                .mpa(mpaRatingDbStorage.setMPARating(rs, rowSet))
+                .genres(setGenres(rs))
+                .likes(setLikes(rs))
                 .build();
     }
 
-    // Testing of getting MODEL
-
-    private static final String SQL_FIND_MODEL_FILMS
-            = "SELECT f.*, mpa.mpa_rating_name, g.genre_name, l.user_id"
-            + " FROM films f"
-            + " LEFT JOIN mpa_rating mpa ON mpa.mpa_rating_id = f.mpa_rating_id"
-            + " LEFT JOIN genre_link gl ON gl.film_id = f.film_id"
-            + " LEFT JOIN genre g ON g.genre_id = gl.genre_id"
-            + " LEFT JOIN likes l ON l.film_id = f.film_id";
-
-    public List<Film> getaFilm() {
-        List<Map<String, Object>> map = jdbcTemplate.queryForList(SQL_FIND_MODEL_FILMS);
-        return map.stream()
-                .map(this::setFilmModel)
-                .collect(Collectors.toList());
-    }
-
-    private Film setFilmModel(Map<String, Object> o) {
-        return Film.builder()
-                .id(Long.valueOf((Integer) o.get("FILM_ID")))
-                .name((String) o.get("NAME"))
-                .description((String) o.get("DESCRIPTION"))
-                .releaseDate(((Date) o.get("RELEASE_DATE")).toLocalDate())
-                .duration((Integer) o.get("DURATION"))
-                .mpa(setMPAModel((Integer) o.get("MPA_RATING_ID"), (String) o.get("MPA_RATING_NAME")))
-                .genres(setGenreModels((Integer) o.get("GENRE_ID"), (String) o.get("GENRE_NAME")))
-                .likes(setLikes((Integer) o.get("USER_ID")))
-                .build();
-    }
-
-    private List<Long> setLikes(Integer userId) {
-        return List.of(Long.valueOf(userId));
-    }
-
-    private List<Genre> setGenreModels(Integer genreId, String genreName) {
+    private List<Genre> setGenres(ResultSet rs) throws SQLException {
+        if (rs.getString("genre_ids") == null
+                || rs.getString("genre_names") == null) {
+            return Collections.emptyList();
+        }
         List<Genre> genres = new ArrayList<>();
-        genres.add(
-                Genre.builder()
-                        .id(genreId)
-                        .name(genreName)
-                        .build()
-        );
+        String[] genresIds = (rs.getString("genre_ids")).split(",");
+        String[] genresNames = (rs.getString("genre_names")).split(",");
+
+        IntStream
+                .range(0, genresIds.length)
+                .forEach(i -> genres.add(
+                        Genre.builder()
+                                .id(Integer.valueOf(genresIds[i]))
+                                .name(genresNames[i])
+                                .build()));
         return genres;
     }
 
-    private MPARating setMPAModel(Integer mpaRatingId, String mpaRatingName) {
-        return MPARating.builder()
-                .id(mpaRatingId)
-                .name(mpaRatingName)
-                .build();
+    private List<Long> setLikes(ResultSet rs) throws SQLException {
+        if (rs.getString("user_ids") == null) {
+            return Collections.emptyList();
+        }
+        String[] likes = rs.getString("user_ids").split(",");
+
+        return Arrays.stream(likes)
+                .map(Long::parseLong)
+                .collect(Collectors.toList());
     }
 
 }
